@@ -1,0 +1,21 @@
+<!-- Mono DLL map for Python.Runtime.dll
+
+Keep this file next to Python.Runtime.dll
+
+For more information read:
+  http://www.mono-project.com/Config
+  http://www.mono-project.com/Config_DllMap
+
+-->
+
+<configuration>
+	<dllmap dll="python23" target="libpython2.3.so" os="!windows" />
+	<dllmap dll="python24" target="libpython2.4.so" os="!windows" />
+	<dllmap dll="python25" target="libpython2.5.so" os="!windows" />
+	<dllmap dll="python26" target="libpython2.6.so" os="!windows" />
+	<dllmap dll="python23.dll" target="libpython2.3.so" os="!windows" />
+	<dllmap dll="python24.dll" target="libpython2.4.so" os="!windows" />
+	<dllmap dll="python25.dll" target="libpython2.5.so" os="!windows" />
+	<dllmap dll="python26.dll" target="libpython2.6.so" os="!windows" />
+</configuration>
+
